--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ ENV/
 *.db
 *.sqlite
 *.sqlite3
+*.db.backup.*
 
 # IDE
 .idea/
@@ -29,7 +30,14 @@ temp/*.json
 output/reports/*.xlsx
 output/reports/*.html
 output/emails/*.msg
+output/emails/*.eml
+output/emails/*.html
+output/emails/sent/
 output/backups/*.db
+output/scans/**
+
+# Keep empty output folders in git
+!output/**/.gitkeep
 
 # OS files
 .DS_Store
